<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bukutere" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="#4D000000"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:text="@string/_7_book"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:text="@string/_7_series_book"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Synopsis"
        android:textSize="22dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:lineSpacingMultiplier="1"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Judul Buku"
        android:textStyle="italic"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <!--Series 1-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/bumi"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content_1"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 2-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/bulan"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content2"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 3-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/matahari"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content3"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 4-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/bintang"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content4"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 5-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ceros"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content5"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 6-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/komet"
                android:contentDescription="TODO" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content6"
                android:textColor="@android:color/black"/>

        </TableRow>
        <TableRow android:padding="15dp"></TableRow>

        <!--Series 7-->
        <TableRow>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/minor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:text="@string/content7"
                android:textColor="@android:color/black"/>

        </TableRow>
    </TableLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pembuat"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:padding="15dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
       android:padding="15dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/profile"
            android:id="@+id/profile"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/maker"
            android:textStyle="italic"
            android:layout_toRightOf="@+id/profile"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
</LinearLayout>

</ScrollView>